--- a/CSS/style.css
+++ b/CSS/style.css
@@ -31,7 +31,7 @@ body, html {
 .carousel-caption {
     position: absolute;
     top: 50%;
-    transform: translateY(-80%);
+    transform: translateY(-100%);
     text-shadow: 1px 1px 10px white;
     
 }
@@ -74,4 +74,45 @@ body, html {
 .fa-code, .fa-bold, .fa-css3 {
     font-size: 4em;
     margin: 1em;
+}
+
+#lol {
+    height: 400px;
+    border-top: #f0f0f0;
+    border-bottom: #f0f0f0;
+    background: url(../img/bg.jpg) no-repeat center center fixed;
+    background-blend-mode: multiply;
+    background-color: lightblue;
+    background-size: cover;
+}
+
+#gifsBtn {
+    margin-bottom: 20px;
+}
+
+#gifs img {
+    max-width: 100%;
+    max-height: 200px;
+    margin-bottom: 20px;
+}
+
+.social a {
+    font-size: 4em;
+    padding: 20px;
+}
+
+.fa-facebook {color: #3b5998;}
+.fa-twitter {color: #00aced;}
+.fa-instagram {color: #517fa4;}
+.fa-youtube {color: #bb0000;}
+
+.fa-facebook:hover, .fa-twitter:hover, .fa-instagram:hover, .fa-youtube:hover {
+    color: #cccc;
+}
+
+footer {
+    background-color: #3f3f3f;
+    padding-top: 50px;
+    border-top: 4px solid silver;
+    color: white;
 }
